--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ d3.csv("chemtrail.csv", function(d) {
 }, function(error, data) {
   if (error) throw error;
 
-  d3.csv("users.csv", function(error, userData) {
+  d3.csv("manomachine.csv", function(error, userData) {
     if (error) throw error;
 
     console.log(data);
@@ -83,11 +83,13 @@ d3.csv("chemtrail.csv", function(d) {
 
     let longTail = [];
 
-  // listData.forEach(function(pair){
-  //   arrayUser.push(pair)
-  // })
+    let arrayUser = [];
 
-  let arrayUser = [];
+  userData.forEach(function(pair){
+    arrayUser.push(pair)
+  })
+
+  console.log(arrayUser);
 
   g.selectAll(".bar")
   .data(data)
@@ -108,16 +110,16 @@ d3.csv("chemtrail.csv", function(d) {
           return "black";
         }
       })
-//   .style("opacity", d => { 
-//     let found = arrayUser.findIndex(function(el){
-//   return el == d.pair
-// });
-// if (found == -1) {
-//   return 0;
-// } else {
-//   return 1;
-// }
-//   });
+  .style("opacity", d => { 
+    let found = arrayUser.findIndex(function(el){
+      return el === d.pair
+    });
+    if (found == -1) {
+      console.log("FALSE")
+    } else {
+      console.log("TRUE")
+    }
+  });
 
 console.log(counter)
 console.log(longTail[0].pair)
