--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ d3.csv("chemtrail.csv", function(d) {
   .attr("class", "bar")
   .attr("x", function(d) { return x(d.pair); })
   .attr("y", height / 2)
-  .attr("width", x.bandwidth())
+  .attr("width", 0.4)
   .attr("height", 10)
   .attr("fill", function(d) {
     counter += d.weight;
@@ -112,12 +112,12 @@ d3.csv("chemtrail.csv", function(d) {
       })
   .style("opacity", d => { 
     let found = arrayUser.findIndex(function(el){
-      return el === d.pair
+      return el.pair === d.pair
     });
     if (found == -1) {
-      console.log("FALSE")
+      return 0;
     } else {
-      console.log("TRUE")
+      return 1;
     }
   });
 
